[package]
name = "HentaiTraker"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
password-hash = "0.6.1"
rand = "0.10.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = "1.51.1"
